[DOC] S4 OOMKill closure — append 4-round failure analysis to load test postmortem; add V2 chaos engineering + JVM observability roadmap